# cdad-book

./: .gitignore  .nojekyll  00-intro.qmd  01-operacionalizacao-conceitos.qmd  01-tipos-variaveis.html  02-organizacao-dados-taxas.html  03-medidas-posicao-variabilidade.html  04-visualizacao-plotnine.html  04-visualizacao-seaborn.html  04-visualizacao-seaborn.ipynb  05-amostras-populacoes.html  06-probabilidade-cnormal.html  07-medidas-posicao-variabilidade.qmd  07-testes-hipoteses.html  08-correlacao-regressao.html  08-correlacao-regressao.ipynb  09-modelos-classificacao.html  09-modelos-classificacao.ipynb  10-corporativo.html  10-corporativo.ipynb  11-openai.html  11-openai.ipynb  12-exercicios.html  12-exercicios.qmd  README.md  _quarto.yml  index.html  index.qmd  intro.html  intro.qmd  pyproject.toml  references.bib  refs.html  refs.qmd  resumo.html  resumo.qmd  resumo.qmd.bak  search.json  style.css
.github/workflows/: _publish.yml  preview.yml
