[project]
name = "cdad-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "plotnine>=0.13.0",
    "pyyaml>=6.0.3",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
]
